{
    "name": "PLayerCONTROLS",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "38e6f011-5044-4463-973b-cce8b2086734",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "0dcce579-e2d8-4199-8dc2-3368e4e3c33f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Left Stick",
                    "id": "72ccc183-7fde-4875-8890-8ee14f359375",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e7a2f069-0daa-44fb-a20c-37c02c6589a6",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "27b6d506-51ba-4772-b3c2-57d64435a84e",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0d760e79-be99-4903-91a3-e115c2275482",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4e72175f-59fa-41d4-8b99-7ee83fa13f32",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "a704b847-69eb-427b-9198-0cdfe9e713d5",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "8b97a372-af30-4231-9644-0198ac3ef71a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Right Stick",
                    "id": "2f06961a-a31e-4ea5-930e-1ec77a3c7b68",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ac4d50c0-06a2-4730-98b8-e4d62243d479",
                    "path": "<XInputController>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f35d9f4d-7c64-4275-9be4-975d79848e46",
                    "path": "<XInputController>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "61ff7005-423c-42bc-8a55-6b495d90577d",
                    "path": "<XInputController>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b1fc56ec-2f6e-4d61-9a82-571f9d083307",
                    "path": "<XInputController>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "6756a1b0-929d-470d-bfe8-6beccaf73171",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "0a64e5ed-469d-4bed-a027-571e6011d77b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40eee508-c4d7-4c54-b5bc-dd6dd2e81470",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}